# NN-aim

./: CMakeLists.txt  NN-aim.sln
NN-aim/: .cproject  .project  Game.cpp  Game.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  NN-aim.vcxproj  NN-aim.vcxproj.filters  NeuralNetwork.cpp  NeuralNetwork.h  Player.cpp  Player.h  RandomGenerator.cpp  RandomGenerator.h  SDLWrapper.cpp  SDLWrapper.h  Vec2.h  main.cpp  utils.cpp  utils.h
